--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Curso em Vídeo</title>
+    <link rel="shortcut icon" href="imagens/curso-em-video.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css" />
+    <title>Curso em Vídeo</title>
   </head>
   <body>
     <main>
-      <header>
+      <header class="principal">
         <h1>Cursos Grátis</h1>
         <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo" />
       </header>
-      <article>
+      <article class="curso-html-css">
         <h2>Curso de HTML5 com CSS3</h2>
         <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML" />
         <p>
@@ -24,7 +25,7 @@
         </p>
         <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
       </article>
-      <article>
+      <article class="curso-javascript">
         <h2>Curso de JavaScript</h2>
         <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS" />
         <p>
