--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as
           configurações visuais que um site vai ter.
         </p>
-        <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
+        <p><a href="pages/curso-html.html">Acesse o curso de HTML5</a></p>
       </article>
       <article class="curso-javascript">
         <h2>Curso de JavaScript</h2>
@@ -35,7 +35,7 @@
           elementos HTML por meio do
           <abbr title="Document Object Model">DOM</abbr>.
         </p>
-        <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
+        <p><a href="pages/curso-js.html">Acesse o curso de JavaScript</a></p>
       </article>
     </main>
   </body>
